--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Glob API URL
 VITE_GLOB_API_URL=/api
 
-VITE_APP_API_BASE_URL=http://chat-gpt-perfect-ui-ich5b6gun-changeng2006.vercel.app:3002/
+VITE_APP_API_BASE_URL=http://127.0.0.1:3002/
 
 # Whether long replies are supported, which may result in higher API fees
 VITE_GLOB_OPEN_LONG_REPLY=false
